<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompararModelos"
    android:background="#1b384a">

    <ScrollView
        android:id="@+id/sv_compararModelos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="120dp"
            android:background="@drawable/estilo_constrain"
            android:elevation="20dp"
            android:outlineSpotShadowColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="8dp"
                    android:tint="@color/botones"
                    app:srcCompat="@drawable/nota" />

                <EditText
                    android:id="@+id/registroUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/estilo_cajon_texto"
                    android:ems="10"
                    android:hint="@string/usuario"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="#92FFFFFF" />

                <EditText
                    android:id="@+id/registroEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/estilo_cajon_texto"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="#92FFFFFF" />

                <EditText
                    android:id="@+id/registroContraseña"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/estilo_cajon_texto"
                    android:ems="10"
                    android:hint="@string/contraseña"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="#92FFFFFF" />

                <EditText
                    android:id="@+id/registroContraseña2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/estilo_cajon_texto"
                    android:ems="10"
                    android:hint="@string/repetir_contraseña"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="#92FFFFFF" />

                <EditText
                    android:id="@+id/registroNumero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/estilo_cajon_texto"
                    android:ems="10"
                    android:hint="@string/telefono"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="#92FFFFFF" />

                <Button
                    android:id="@+id/botonRegistrarUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/estilo_boton"
                    android:onClick="registrarUsuarios"
                    android:text="@string/registrarse"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/botonCancelarRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/estilo_boton_registro"
                    android:onClick="cancelarRegistro"
                    android:text="@string/volver"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/botonRegistrarUsuario"  />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>